--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.7"
   }
 }
